<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsActivity"
    android:background="@color/colorPrimaryDark">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/settings_circle_image"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="41dp"
        android:src="@drawable/avatar"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="83dp"
        tools:layout_editor_absoluteY="67dp" />

    <TextView
        android:id="@+id/settings_display_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="262dp"
        android:textColor="#FFFFFF"
        android:textSize="24dp"
        android:text="@string/default_name" />

    <TextView
        android:id="@+id/settings_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/settings_display_name"
        android:layout_centerHorizontal="true"
        android:text="@string/hey_there_i_m_using_menfriends"
        android:textColor="#FFFFFF" />

    <Button
        android:id="@+id/settings_change_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="145dp"
        android:background="@android:color/white"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:text="Change Image"
        android:onClick="changeDp"/>

    <Button
        android:id="@+id/settings_change_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="75dp"
        android:background="@color/colorAccent"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:text="@string/change_status"
        android:textColor="@android:color/white"
        android:onClick="goToChangeStatus"/>

</RelativeLayout>